[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

#[project]
#name = "benchmark"
#version = "0.0.7"
#description = "A benchmarking tool for inference performance evaluation"
#authors = [
#    { name = "weizj2000", email = "weizj2000@gmail.com" }
#]
#readme = "README.md"
#license = { text = "MIT" }
#requires-python = ">=3.8"
#
#dependencies = [
#    "aiohttp",
#    "tqdm",
#    "numpy",
#    "pandas",
#    "openpyxl",
#    "requests",
#    "transformers"
#]
#
#[project.scripts]
#benchmark = "main:main"
